# Entity-Matching-With-LLMs

./: .env_template  README.md  env_template  json_to_csv.ipynb  prompts.py  pyproject.toml  requirements.txt
datasets/: GoogleAmazonSampled_400.csv  GoogleAmazonSet_Products  WalAmazonDataset_sampled.csv  amazon_walmart_DPL.tsv  amazon_walmart_NDPL.tsv  amazon_walmart_auto_cot_reasoning.csv  auto_gpt3_gpt3_50_50_generations_merged.csv  auto_gpt4_gpt3_50_50_generations_v2_merged.csv  auto_gpt4_gpt4_50_50_generations.csv  auto_gpt4_gpt4_50_50_generations_merged.csv  baseline_zero_shot_gpt3_50_50.csv  baseline_zero_shot_gpt3_50_50_merged.csv  downsampled_50_50.csv  downsampled_50_50_mustafa.csv  downsampled_50_50_v16  manual_gpt3_50_50_generations.csv  manual_gpt3_50_50_generations_merged.csv  manual_gpt3_ama_wal_generations.csv  saved_prompts.csv  training_data_50_50.csv
entity_matching_with_llms/: main.py
evals/: eval_Google_Amazon_v1.csv  eval_Walmart_Amazon_v1.csv  eval_downsampled_50_50_v1.csv  saved_prompts_GA.csv  saved_prompts_WA.csv
notebooks/: OpenAI_gpt3_eval_v1-checkpoint.ipynb  auto_cot.ipynb  auto_reasoning.ipynb  auto_reasoning_baseline.ipynb  auto_reasoning_zero_shot.ipynb  basic_pipeline.ipynb  basic_pipeline_llama.ipynb  clustering_auto_analysis.ipynb  evaluate_experiments.ipynb  load_structured_explanation.ipynb  pipeline.ipynb  process_exported_completions.ipynb  process_exported_completions_baseline.ipynb  prompts.py  roc_curve.ipynb  sampleset_preprocessing.ipynb  sequential_pipeline.ipynb  unstructured_auto_analysis.ipynb
(+49 files in other folders)
