[tool.poetry]
name = "entity-matching-with-llms"
version = "0.1.0"
description = ""
authors = ["paulburkhardt <92929336+paulburkhardt@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "entity_matching_with_llms"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.0"
langchain = "^0.0.308"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.1"
langfuse = "^1.0.30"
llamaapi = "^0.1.36"
langchain-experimental = "^0.0.29"
matplotlib = "^3.8.1"
cohere = "^4.36"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
